# computacao-visual-atividade-cubo

./: CMakeLists.txt  README.md  hellogl.c  main.c  rotation.c  rotation.h
buildx/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  opengl
buildx/.cmake/api/v1/reply/: cache-v2-15d7b44625ac9a4e6b02.json  cmakeFiles-v1-5d8c542082a0f416c6ad.json  codemodel-v2-429c099df76851f9d24a.json  index-2024-05-26T16-36-43-0817.json  target-Continuous-Debug-e9b24fd1071845f58fb0.json  target-ContinuousBuild-Debug-13f16989301dbeafa16a.json  target-ContinuousConfigure-Debug-aa2787d854535d441ced.json  target-ContinuousCoverage-Debug-9be5075f7573e42ded78.json  target-ContinuousMemCheck-Debug-e92f598e9a8795fab9a7.json  target-ContinuousStart-Debug-4265be3546f1fd39f886.json  target-ContinuousSubmit-Debug-28a8d9c650f40aa887fc.json  target-ContinuousTest-Debug-46050d3f08a7274d0b74.json  target-ContinuousUpdate-Debug-3fabb446b4dc3d2f37ac.json  target-Experimental-Debug-9395ba490101c7f2aa9e.json  target-ExperimentalBuild-Debug-2110758cb024404cd0ae.json  target-ExperimentalConfigure-Debug-e616971f8c181146066e.json  target-ExperimentalCoverage-Debug-f62ecfbd8eaee57dda04.json  target-ExperimentalMemCheck-Debug-1ff684c079a4be1bd018.json  target-ExperimentalStart-Debug-33901297621db1207988.json  target-ExperimentalSubmit-Debug-7452570751b997cd7bb2.json  target-ExperimentalTest-Debug-3978bf7219af43362199.json  target-ExperimentalUpdate-Debug-261f6acb65175f754928.json  target-Nightly-Debug-10d1d92e8063ded87457.json  target-NightlyBuild-Debug-796d95f2e5ec81dc7839.json  target-NightlyConfigure-Debug-494a62c11f4463a50685.json  target-NightlyCoverage-Debug-52d654030d92af77dff5.json  (+7 more)
buildx/Testing/: TAG
buildx/Testing/20240526-1629/: Test.xml
